--- a/app/src/main/resources/application-development.yml
+++ b/app/src/main/resources/application-development.yml
@@ -1,7 +1,5 @@
-# BEGIN
+
 spring:
   datasource:
-    password: 123
-    url: jdbc:h2:mem:test
-    username: sa
-# END
+    url: jdbc:h2:mem:project
+
