--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -8,3 +8,6 @@ spring:
   output:
     ansi:
       enabled: always
+rsa:
+  private-key: classpath:certs/private.pem
+  public-key: classpath:certs/public.pem
